--- a/reference/common/schemas/create-report-model.yaml
+++ b/reference/common/schemas/create-report-model.yaml
@@ -274,7 +274,7 @@ properties:
     items: {}
     default: []
     description: |-
-      Identyfikatory pól raportu wybranych przez użytkownika
+      Identyfikatory pól raportu wybranych przez użytkownika. W przypadku pustej listy raport zawiera wszystkie dostępne pola obwieszczenia.
       <details>
       <summary>Pokaż możliwe opcje</summary>
 
