--- a/reference/common/schemas/announcement-model.yaml
+++ b/reference/common/schemas/announcement-model.yaml
@@ -460,7 +460,7 @@ properties:
         url:
           type: string
           format: url
-          description: Adres URL źródła danych
+          description: Link do podglądu treści ogłoszenia
     description: Nieprzetworzona treść ogłoszenia
 example:
   id: 622ef5cbf15eb859f650208f
@@ -492,6 +492,12 @@ example:
     position_number: '67445'
     section: 9
     yearly_number: '214'
+  krz_entry:
+    chapter: 1
+    issue_date: '2022-01-11'
+    section: 20
+    subsection: 30
+    signature: 20220111/00004
   content:
     text: Postanowieniem z dnia ...
     html: <tresc><p style="margin:15px 0px 0px 0px">Postanowieniem z dnia ...</p></tresc>
