--- a/reference/ins_api/paths/user-filter-by-id-v2-filters-id-GET.yaml
+++ b/reference/ins_api/paths/user-filter-by-id-v2-filters-id-GET.yaml
@@ -31,6 +31,17 @@ parameters:
       type: string
   name: exclude
   in: query
+  description: |-
+    Pola, które nie będą zwrócone w odpowiedzi.
+    <details><summary>Pokaż możliwe opcje</summary>
+
+    | Wartość | Nazwa  |
+    |-|-|
+    | `content` | Zawartość filtra |
+    | `items_count`| Liczba wszystkich identyfikatorów w filtrze |</details>
+  example:
+  - content
+  - items_count
 - required: false
   schema:
     title: Authorization
