--- a/reference/msig/paths/updates-GET.yaml
+++ b/reference/msig/paths/updates-GET.yaml
@@ -34,6 +34,11 @@ responses:
             description: Lista aktualizacji spełniających kryteria określone w parametrach
               metody, posortowanych według daty udostępnienia
             title: Sukces
+            example:
+              validation_datetime: '2019-06-10T10:13:12.115Z'
+              issue_date: '2019-06-10'
+              announcements_count: 213
+              creation_datetime: '2019-06-10T09:13:12.115Z'
           - title: Błąd
             required:
             - detail
