--- a/reference/ins_api/paths/report-by-id-v2-reports-report-id-GET.yaml
+++ b/reference/ins_api/paths/report-by-id-v2-reports-report-id-GET.yaml
@@ -42,8 +42,8 @@ responses:
       application/json:
         schema:
           example:
-            details: Error Description
             error: Bad Request
+            details: Invalid objectid
           items:
             $ref: '#/components/schemas/Error'
   '401':
@@ -52,8 +52,8 @@ responses:
       application/json:
         schema:
           example:
-            details: Error Description
             error: Unauthorized
+            details: User token not provided
           items:
             $ref: '#/components/schemas/Error'
   '403':
@@ -62,8 +62,8 @@ responses:
       application/json:
         schema:
           example:
-            details: Error Description
             error: Forbidden
+            details: Incorrect user token
           items:
             $ref: '#/components/schemas/Error'
   '404':
@@ -72,8 +72,8 @@ responses:
       application/json:
         schema:
           example:
-            details: Error Description
             error: Not Found
+            details: Report not found
           items:
             $ref: '#/components/schemas/Error'
 description: Zwraca raport o podanym `id`.
