--- a/reference/ins_api/paths/user-monitor-by-id-v2-monitors-id-GET.yaml
+++ b/reference/ins_api/paths/user-monitor-by-id-v2-monitors-id-GET.yaml
@@ -61,8 +61,8 @@ responses:
       application/json:
         schema:
           example:
-            details: Error Description
             error: Bad Request
+            details: Invalid objectid
           items:
             $ref: '#/components/schemas/Error'
   '401':
@@ -71,8 +71,8 @@ responses:
       application/json:
         schema:
           example:
-            details: Error Description
             error: Unauthorized
+            details: User token not provided
           items:
             $ref: '#/components/schemas/Error'
   '403':
@@ -81,8 +81,8 @@ responses:
       application/json:
         schema:
           example:
-            details: Error Description
             error: Forbidden
+            details: Incorrect user token
           items:
             $ref: '#/components/schemas/Error'
   '404':
@@ -91,8 +91,8 @@ responses:
       application/json:
         schema:
           example:
-            details: Error Description
             error: Not Found
+            details: Monitor not found
           items:
             $ref: '#/components/schemas/Error'
 description: Zwraca monitoring o podanym `id`.
