--- a/reference/ins_api/paths/create-filter-v2-filters-POST.yaml
+++ b/reference/ins_api/paths/create-filter-v2-filters-POST.yaml
@@ -31,8 +31,8 @@ responses:
       application/json:
         schema:
           example:
-            details: Error Description
             error: Bad Request
+            details: Filter content cannot be empty
           items:
             $ref: '#/components/schemas/Error'
   '401':
@@ -41,8 +41,8 @@ responses:
       application/json:
         schema:
           example:
-            details: Error Description
             error: Unauthorized
+            details: User token not provided
           items:
             $ref: '#/components/schemas/Error'
   '403':
@@ -51,8 +51,8 @@ responses:
       application/json:
         schema:
           example:
-            details: Error Description
             error: Forbidden
+            details: Incorrect user token
           items:
             $ref: '#/components/schemas/Error'
   '429':
@@ -61,8 +61,9 @@ responses:
       application/json:
         schema:
           example:
-            details: Error Description
             error: Too Many Requests
+            details: You have specified too many filter items. Your limit items of
+              filter is 100.
           items:
             $ref: '#/components/schemas/Error'
 description: |-
