--- a/reference/ins_api/paths/download-report-by-id-v2-reports-report-id-download-GET.yaml
+++ b/reference/ins_api/paths/download-report-by-id-v2-reports-report-id-download-GET.yaml
@@ -47,8 +47,8 @@ responses:
       application/json:
         schema:
           example:
-            details: Error Description
             error: Bad Request
+            details: Invalid objectid
           items:
             $ref: '#/components/schemas/Error'
   '401':
@@ -57,8 +57,8 @@ responses:
       application/json:
         schema:
           example:
-            details: Error Description
             error: Unauthorized
+            details: User token not provided
           items:
             $ref: '#/components/schemas/Error'
   '403':
@@ -67,8 +67,8 @@ responses:
       application/json:
         schema:
           example:
-            details: Error Description
             error: Forbidden
+            details: Incorrect user token
           items:
             $ref: '#/components/schemas/Error'
   '404':
@@ -77,8 +77,8 @@ responses:
       application/json:
         schema:
           example:
-            details: Error Description
             error: Not Found
+            details: Report not found
           items:
             $ref: '#/components/schemas/Error'
 description: |-
