--- a/reference/ins_api/paths/notifications-v2-notifications-GET.yaml
+++ b/reference/ins_api/paths/notifications-v2-notifications-GET.yaml
@@ -27,8 +27,8 @@ responses:
       application/json:
         schema:
           example:
-            details: Error Description
             error: Bad Request
+            details: Error Description
           items:
             $ref: '#/components/schemas/Error'
   '401':
@@ -37,8 +37,8 @@ responses:
       application/json:
         schema:
           example:
-            details: Error Description
             error: Unauthorized
+            details: User token not provided
           items:
             $ref: '#/components/schemas/Error'
   '403':
@@ -47,8 +47,8 @@ responses:
       application/json:
         schema:
           example:
-            details: Error Description
             error: Forbidden
+            details: Incorrect user token
           items:
             $ref: '#/components/schemas/Error'
 description: Zwraca powiadomienia dla aktualnego użytkownika.
