--- a/reference/ins_api/paths/user-monitors-v2-monitors-id-PATCH.yaml
+++ b/reference/ins_api/paths/user-monitors-v2-monitors-id-PATCH.yaml
@@ -41,8 +41,8 @@ responses:
       application/json:
         schema:
           example:
-            details: Error Description
             error: Bad Request
+            details: Invalid objectid
           items:
             $ref: '#/components/schemas/Error'
   '401':
@@ -51,8 +51,8 @@ responses:
       application/json:
         schema:
           example:
-            details: Error Description
             error: Unauthorized
+            details: User token not provided
           items:
             $ref: '#/components/schemas/Error'
   '403':
@@ -61,8 +61,8 @@ responses:
       application/json:
         schema:
           example:
-            details: Error Description
             error: Forbidden
+            details: Incorrect user token
           items:
             $ref: '#/components/schemas/Error'
   '404':
@@ -71,8 +71,8 @@ responses:
       application/json:
         schema:
           example:
-            details: Error Description
             error: Not Found
+            details: Monitors not found
           items:
             $ref: '#/components/schemas/Error'
 description: |-
