--- a/reference/ins_api/paths/user-notification-by-id-v2-notifications-id-GET.yaml
+++ b/reference/ins_api/paths/user-notification-by-id-v2-notifications-id-GET.yaml
@@ -35,8 +35,8 @@ responses:
       application/json:
         schema:
           example:
-            details: Error Description
             error: Bad Request
+            details: Invalid objectid
           items:
             $ref: '#/components/schemas/Error'
   '401':
@@ -45,8 +45,8 @@ responses:
       application/json:
         schema:
           example:
-            details: Error Description
             error: Unauthorized
+            details: User token not provided
           items:
             $ref: '#/components/schemas/Error'
   '403':
@@ -55,8 +55,8 @@ responses:
       application/json:
         schema:
           example:
-            details: Error Description
             error: Forbidden
+            details: Incorrect user token
           items:
             $ref: '#/components/schemas/Error'
   '404':
@@ -65,8 +65,8 @@ responses:
       application/json:
         schema:
           example:
-            details: Error Description
             error: Not Found
+            details: Notification not found
           items:
             $ref: '#/components/schemas/Error'
 description: Zwraca powiadomienie o podanym `id`.
