--- a/reference/ins_api/paths/actual-user-filters-v2-filters-GET.yaml
+++ b/reference/ins_api/paths/actual-user-filters-v2-filters-GET.yaml
@@ -49,8 +49,18 @@ responses:
       application/json:
         schema:
           example:
-            error: Bad Request
-            details: 'unexpected value; permitted: ''content'', ''items_count'''
+            error: Validation error
+            details:
+            - loc:
+              - query
+              - exclude
+              msg: 'unexpected value; permitted: ''content'', ''items_count'''
+              type: value_error.const
+              ctx:
+                given: ''
+                permitted:
+                - content
+                - items_count
           items:
             $ref: '#/components/schemas/Error'
   '401':
