--- a/reference/ins_api/paths/announcement-by-id-v2-announcements-id-GET.yaml
+++ b/reference/ins_api/paths/announcement-by-id-v2-announcements-id-GET.yaml
@@ -64,8 +64,13 @@ responses:
       application/json:
         schema:
           example:
-            error: Bad Request
-            details: Invalid objectid
+            error: Validation error
+            details:
+            - loc:
+              - path
+              - id
+              msg: Invalid objectid
+              type: value_error
           items:
             $ref: '#/components/schemas/Error'
   '401':
