--- a/reference/ins_api/paths/user-filter-by-id-v2-filters-id-GET.yaml
+++ b/reference/ins_api/paths/user-filter-by-id-v2-filters-id-GET.yaml
@@ -64,8 +64,22 @@ responses:
       application/json:
         schema:
           example:
-            error: Bad Request
-            details: Invalid objectid
+            error: Validation error
+            details:
+            - loc:
+              - path
+              - id
+              msg: Invalid objectid
+              type: value_error
+            - loc:
+              - path
+              - id
+              msg: 'unexpected value; permitted: ''last'''
+              type: value_error.const
+              ctx:
+                given: abcd
+                permitted:
+                - last
           items:
             $ref: '#/components/schemas/Error'
   '401':
