--- a/reference/common/schemas/announcement-model.yaml
+++ b/reference/common/schemas/announcement-model.yaml
@@ -23,7 +23,7 @@ properties:
     items:
       required:
       - info
-      - adress
+      - address
       - numbers
       type: object
       properties:
@@ -66,7 +66,7 @@ properties:
                 description: Forma prawna
           type: array
           description: Podstawowe dane podmiotu
-        adress:
+        address:
           items:
             required:
             - town
