name field in announcements

--- a/reference/ins_api/paths/announcements-v2-announcements-GET.yaml
+++ b/reference/ins_api/paths/announcements-v2-announcements-GET.yaml
@@ -291,6 +291,14 @@ parameters:
   example: Kowalczyk
 - required: false
   schema:
+    title: Name
+    type: string
+  name: name
+  in: query
+  description: Imię i nazwisko osoby, której dotyczy ogłoszenie
+  example: Jan Kowalski
+- required: false
+  schema:
     title: Signature
     type: string
   name: signature
