--- a/reference/common/schemas/query-raport-by-notification-model.yaml
+++ b/reference/common/schemas/query-raport-by-notification-model.yaml
@@ -6,4 +6,6 @@ properties:
   notification_id:
     title: Notification Id
     type: string
+    description: Identyfikator notyfikacji na postawie, którego zostanie wygenerowany
+      raport
 additionalProperties: false
