--- a/reference/common/schemas/create-report-model.yaml
+++ b/reference/common/schemas/create-report-model.yaml
@@ -39,24 +39,34 @@ properties:
         custom_categories:
           type: array
           items:
+            title: CategoriesEnum
             enum:
             - K
             - K.0
             - K.0.0
-            - K.0.1
+            - K.0.0.0
             - K.0.2
-            - K.0.3
-            - K.0.4
             - K.0.5
             - K.0.6
+            - K.0.6.4
             - K.0.7
             - K.0.8
             - K.0.9
             - K.0.10
+            - K.1.22
+            - K.0.1
+            - K.0.1.1
+            - K.0.2.2
+            - K.0.3
+            - K.0.3.3
+            - K.0.4
             - K.1
             - K.1.20
+            - K.1.20.30
             - K.1.21
-            - K.1.22
+            - K.1.21.32
+            - K.1.22.31
+            - K.1.22.35
             - K.1.23
             - K.1.24
             - K.1.25
@@ -66,9 +76,11 @@ properties:
             - K.1.29
             - K.1.30
             - K.1.31
+            - K.1.31.34
             - K.1.32
             - K.1.33
             - K.1.34
+            - K.1.34.33
             - K.2
             - K.2.40
             - K.2.41
@@ -116,28 +128,37 @@ properties:
             - M.1.49
             - M.1.50
             type: string
-            description: An enumeration.
-            title: CategoriesEnum
           default: []
+          description: Identyfikatory kategorii ogłoszeń wybranych przez użytkownika.
+            Lista możliwych wartości dostępna jest pod adresem [/v2/dicts/announcement-categories](#operation/get_announcement_category_v2_dicts_announcement_categories_get)
         from_date:
           title: From Date
           type: string
           format: date
+          description: Data początkowa zakresu dla daty publikacji ogłoszenia w MSiG
+            lub KRZ
         to_date:
           title: To Date
           type: string
           format: date
+          description: Data końcowa zakresu dla daty publikacji ogłoszenia w MSiG
+            lub KRZ
         filter_id:
           title: Filter Id
           type: string
           nullable: true
+          description: Identyfikator filtra użytego do wygenerowania raportu
         append_first_entry:
           title: Append First Entry
           type: boolean
           default: true
+          description: Czy pola z sekcji `entity` i `proceeding` powinny być przekopiowane
+            z pierwszego ogłoszenia w ramach postępowania?
+      additionalProperties: false
       example:
         custom_categories:
-        - K
+        - K.1.34.33
+        - M.1.41
         from_date: '2021-11-02'
         to_date: '2021-11-04'
         filter_id: 61ded2f8aff2de52365d891e
@@ -150,121 +171,10 @@ properties:
         notification_id:
           title: Notification Id
           type: string
-    description: Identyfikatory kategorii ogłoszeń wybranych przez użytkownika
-    type: object
-    properties:
-      custom_categories:
-        items:
-          enum:
-          - K
-          - K.0
-          - K.0.0
-          - K.0.1
-          - K.0.2
-          - K.0.3
-          - K.0.4
-          - K.0.5
-          - K.0.6
-          - K.0.7
-          - K.0.8
-          - K.0.9
-          - K.0.10
-          - K.1
-          - K.1.20
-          - K.1.21
-          - K.1.22
-          - K.1.23
-          - K.1.24
-          - K.1.25
-          - K.1.26
-          - K.1.27
-          - K.1.28
-          - K.1.29
-          - K.1.30
-          - K.1.31
-          - K.1.32
-          - K.1.33
-          - K.1.34
-          - K.2
-          - K.2.40
-          - K.2.41
-          - M
-          - M.0
-          - M.0.1
-          - M.0.2
-          - M.0.3
-          - M.0.4
-          - M.0.5
-          - M.0.6
-          - M.0.7
-          - M.0.8
-          - M.0.9
-          - M.1
-          - M.1.20
-          - M.1.21
-          - M.1.22
-          - M.1.23
-          - M.1.24
-          - M.1.25
-          - M.1.26
-          - M.1.27
-          - M.1.28
-          - M.1.29
-          - M.1.30
-          - M.1.31
-          - M.1.32
-          - M.1.33
-          - M.1.34
-          - M.1.35
-          - M.1.36
-          - M.1.37
-          - M.1.38
-          - M.1.39
-          - M.1.40
-          - M.1.41
-          - M.1.42
-          - M.1.43
-          - M.1.44
-          - M.1.45
-          - M.1.46
-          - M.1.47
-          - M.1.48
-          - M.1.49
-          - M.1.50
-          type: string
-          description: An enumeration.
-          title: CategoriesEnum
-        type: array
-        description: Identyfikatory kategorii ogłoszeń wybranych przez użytkownika
-      from_date:
-        format: date
-        type: string
-        description: Data początkowa zakresu dla daty publikacji ogłoszenia w MSiG
-          lub KRZ
-        title: From Date
-      append_first_entry:
-        type: boolean
-        description: Czy pola z sekcji `entity` i `proceeding` powinny być przekopiowane
-          z pierwszego ogłoszenia w ramach postępowania?
-        title: Append First Entry
-      to_date:
-        format: date
-        type: string
-        description: Data końcowa zakresu dla daty publikacji ogłoszenia w MSiG lub
-          KRZ
-        title: To Date
-      filter_id:
-        nullable: true
-        type: string
-        description: Identyfikator filtra użytego do wygenerowania raportu
-        title: Filter Id
-    example:
-      custom_categories:
-      - K
-      from_date: '2021-11-02'
-      append_first_entry: true
-      to_date: '2021-11-04'
-      filter_id: 61ded2f8aff2de52365d891e
+          description: Identyfikator notyfikacji na postawie, którego zostanie wygenerowany
+            raport
+      additionalProperties: false
+    description: Kryteria filtrowania ogłoszeń uwzględnionych w raporcie
   custom_content:
     title: Custom Content
     type: array
