download_datetime as required

--- a/reference/common/schemas/report-model.yaml
+++ b/reference/common/schemas/report-model.yaml
@@ -432,6 +432,8 @@ properties:
     type: array
     items:
       type: object
+      required:
+      - download_datetime
       properties:
         download_datetime:
           title: Download Datetime
