--- a/reference/common/schemas/full-filters-model.yaml
+++ b/reference/common/schemas/full-filters-model.yaml
@@ -1,15 +1,16 @@
-title: FiltersModel
+title: FullFiltersModel
 required:
 - name
+- content
 - id
 - creation_datetime
+- items_count
 type: object
 properties:
   name:
     title: Name
     minLength: 1
     type: string
-    description: Nazwa filtra
   content:
     $ref: ../schemas.yaml#/ContentFiltersModel
     title: ContentFiltersModel
@@ -77,24 +78,20 @@ properties:
   id:
     title: Id
     type: string
-    description: Unikalny identyfikator filtra
   creation_datetime:
     title: Creation Datetime
     type: string
     format: date-time
-    description: Data i czas utworzenia filtra
   last_update_datetime:
     title: Last Update Datetime
     type: string
     format: date-time
     nullable: true
-    description: Data i czas ostatniej aktualizacji filtra
   items_count:
     title: Items Count
     type: integer
-    description: Liczba wszystkich identyfikatorów w filtrze
 example:
-  id: 6221c40ca9ab2f868237cd47
+  id: 6241914e815d3e6b3771fc81
   name: Dłużnicy 2021-11
   content:
     nip:
@@ -113,5 +110,5 @@ example:
     - Jan Kowalski
     - Ambroży Nielepszy
   items_count: 8
-  creation_datetime: '2022-03-02T08:47:24.672670+01:00'
-  last_update_datetime: '2022-03-04T06:47:24.672929+01:00'
+  creation_datetime: '2022-03-26T12:43:26.269733+01:00'
+  last_update_datetime: '2022-03-28T10:43:26.269763+02:00'
