--- a/reference/common/schemas/filters-model.yaml
+++ b/reference/common/schemas/filters-model.yaml
@@ -109,7 +109,7 @@ example:
     - BY1B/GUp/13/2021
     msig_signature:
     - XIV GUp 83/16
-    name:
+    person_name:
     - Jan Kowalski
     - Ambroży Nielepszy
   items_count: 8
